deploy/staging/concept-catalog-frontend/concept-catalog-frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: concept-catalog-frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '32k'
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: begrepskatalog.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: concept-catalog-frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
